--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <!--Sección 1-->
     <div class="row" id="section-1">
-        <div class="two-column" id="section-1">
+        <div class="two-column">
             <h2>Sleepiest</h2>
             <h1>Helps millions fall asleep every night</h1>
             <h3>branding, design, mobile, product</h3>
